--- a/app/src/main/res/layout/app_bar_game_nav.xml
+++ b/app/src/main/res/layout/app_bar_game_nav.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GameNav">
+    tools:context=".nav.ui.GameNav">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
